chore: 移除全部硬编码密钥与内部端点，重建可公开代码库
为将仓库转为公开，移除所有硬编码第三方 API 密钥（DeepSeek / 阿里云 MaaS / SiliconFlow）与内部 MaaS 工作空间端点，统一改为从环境变量读取。

- backend DataInitializer.java: 模型密钥改由 DEEPSEEK_API_KEY / DASHSCOPE_HOST / DASHSCOPE_API_KEY / SILICONFLOW_API_KEY 注入

- datasets/*.py: 默认密钥/端点置空，仅从环境变量读取

- ai/app/core/config.py、docker-compose.yml、scripts/start-zhiyu.ps1、deploy/release/docker-compose.yml: 内部端点改为占位符

- 删除临时密钥清理脚本; 本提交自干净根提交 d4d7ede 重建，不含任何密钥，可安全公开。